demo/02.resiliency/01.retry/02.virtual-service-recommendation-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation-svc
  http:
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation-svc
        subset: version-v2
    retries:
      attempts: 1
      perTryTimeout: 30s
